--- a/Project.ipynb
+++ b/Project.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Project.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPnFGShRzjJhrianJbXBKoS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +31,8 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
