--- a/Project_Amsterdam_House_Price_Prediction.ipynb
+++ b/Project_Amsterdam_House_Price_Prediction.ipynb
@@ -23,9 +23,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.4"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {}
     }
   },
   "cells": [
@@ -34,11 +31,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "c2hHYTtFqvgs",
+        "outputId": "ec7c8ef9-bdf3-4b7c-e8ff-22b23580660a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "5ee0b56b-3994-4a85-d458-35c8b449215a"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -46,7 +43,6 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn import metrics\n",
-        "\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.externals import joblib\n",
         "\n",
@@ -108,8 +104,8 @@
       "metadata": {
         "id": "yaAOMsXRl34t",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "078acd13-de96-434e-b023-4042f75f3911"
+        "outputId": "078acd13-de96-434e-b023-4042f75f3911",
+        "colab": {}
       },
       "source": [
         "df.price.head()"
@@ -150,8 +146,8 @@
       "metadata": {
         "id": "BKQs9GGDl34w",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "befbe98c-90a9-4bb7-a193-7b06fe6c4fe8"
+        "outputId": "befbe98c-90a9-4bb7-a193-7b06fe6c4fe8",
+        "colab": {}
       },
       "source": [
         "df.profile_report(style={'full_width': False})"
@@ -7155,8 +7151,8 @@
       "metadata": {
         "id": "Fjzlt7yxl342",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0e9fde16-fd89-40db-c0e6-415abe2c60df"
+        "outputId": "0e9fde16-fd89-40db-c0e6-415abe2c60df",
+        "colab": {}
       },
       "source": [
         "df['price'].head()"
@@ -7294,12 +7290,12 @@
       "metadata": {
         "colab_type": "code",
         "id": "-xC_lCEfsdl0",
+        "outputId": "f7d0a9a5-297b-48d8-8514-052100769a49",
         "colab": {
           "referenced_widgets": [
             "b8e5aa68618b45788111dd8cad035794"
           ]
-        },
-        "outputId": "f7d0a9a5-297b-48d8-8514-052100769a49"
+        }
       },
       "source": [
         "fig = gmaps.Map(layout={'width': '1000px', 'height': '500px', 'padding': '10px'})\n",
@@ -7364,8 +7360,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "y3bJ5mrNqvii",
-        "colab": {},
-        "outputId": "711d5361-34db-4458-da04-2dbe05a43a30"
+        "outputId": "711d5361-34db-4458-da04-2dbe05a43a30",
+        "colab": {}
       },
       "source": [
         "names = [\"van_gogh_museum\", \"anne_frank_house\", \"dam_sqaure\",\n",
@@ -7575,8 +7571,8 @@
       "metadata": {
         "id": "oX1tAR0al35W",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4aa299db-9743-4664-c1d3-e011dcd822d8"
+        "outputId": "4aa299db-9743-4664-c1d3-e011dcd822d8",
+        "colab": {}
       },
       "source": [
         "df"
@@ -8124,8 +8120,8 @@
       "metadata": {
         "id": "NYJ3dwDwl35j",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "ba11fbda-a7c7-4ba8-b03c-5285ecb40491"
+        "outputId": "ba11fbda-a7c7-4ba8-b03c-5285ecb40491",
+        "colab": {}
       },
       "source": [
         "from sklearn import metrics\n",
@@ -8205,8 +8201,8 @@
       "metadata": {
         "id": "kiDo3EAVl35l",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e77fa69f-10d0-404f-9d1e-36843848179c"
+        "outputId": "e77fa69f-10d0-404f-9d1e-36843848179c",
+        "colab": {}
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -8298,8 +8294,8 @@
       "metadata": {
         "id": "pp10KWeBl35q",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "d3db68ba-5007-4917-ff8c-5b1ffc0cade4"
+        "outputId": "d3db68ba-5007-4917-ff8c-5b1ffc0cade4",
+        "colab": {}
       },
       "source": [
         "y_pred_svr = svr_grid_search.predict(X_test)\n",
@@ -8372,8 +8368,8 @@
       "metadata": {
         "id": "07GXdYlJl35s",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "434955dd-a8d8-4f5f-fe02-f85aef59ca18"
+        "outputId": "434955dd-a8d8-4f5f-fe02-f85aef59ca18",
+        "colab": {}
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -8546,8 +8542,8 @@
       "metadata": {
         "id": "f9GYmUBbl35x",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3bb96ae9-4bf7-45fb-a436-de400f32b3c5"
+        "outputId": "3bb96ae9-4bf7-45fb-a436-de400f32b3c5",
+        "colab": {}
       },
       "source": [
         "plt.figure(figsize=(12, 4), dpi=200)\n",
@@ -8590,8 +8586,8 @@
       "metadata": {
         "id": "toT-98_Ml35z",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3048f0ba-b6c3-4c49-9a78-bc5ba1a59aa1"
+        "outputId": "3048f0ba-b6c3-4c49-9a78-bc5ba1a59aa1",
+        "colab": {}
       },
       "source": [
         "import tensorflow as tf\n",
@@ -8651,8 +8647,8 @@
       "metadata": {
         "id": "9cVujn_9l353",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "bdde39b5-1577-4b91-8ab7-523978d8de96"
+        "outputId": "bdde39b5-1577-4b91-8ab7-523978d8de96",
+        "colab": {}
       },
       "source": [
         "model = build_model()\n",
@@ -8877,8 +8873,8 @@
         "scrolled": true,
         "id": "bSfyKy72l354",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4c7d7395-98b9-4844-e3e9-be313ec9d416"
+        "outputId": "4c7d7395-98b9-4844-e3e9-be313ec9d416",
+        "colab": {}
       },
       "source": [
         "y_pred_NN = regressor.predict(X_test)\n",
@@ -8964,8 +8960,8 @@
       "metadata": {
         "id": "clnMZdwDl356",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "753cfbbc-b0ea-459c-fa5c-af0346c753d6"
+        "outputId": "753cfbbc-b0ea-459c-fa5c-af0346c753d6",
+        "colab": {}
       },
       "source": [
         "plt.figure(figsize=(12, 4), dpi=200)\n",
@@ -8998,8 +8994,8 @@
       "metadata": {
         "id": "pX1F2xKUl357",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "61f77bb2-e971-48d7-cbe1-cdd09b72baff"
+        "outputId": "61f77bb2-e971-48d7-cbe1-cdd09b72baff",
+        "colab": {}
       },
       "source": [
         "coefficients = pd.concat([pd.DataFrame(X.columns, columns=['variable']), \n",
