--- a/Project_Amsterdam_House_Price_Prediction.ipynb
+++ b/Project_Amsterdam_House_Price_Prediction.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "amsterdam.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -27,6 +28,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sanjaytallolli/DataScienceProjects2020/blob/master/Project_Amsterdam_House_Price_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -45,12 +56,10 @@
         "from sklearn import metrics\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.externals import joblib\n",
-        "\n",
         "import os\n",
-        "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
