--- a/Project_Amsterdam_House_Price_Prediction.ipynb
+++ b/Project_Amsterdam_House_Price_Prediction.ipynb
@@ -42,7 +42,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "c2hHYTtFqvgs",
-        "outputId": "ec7c8ef9-bdf3-4b7c-e8ff-22b23580660a",
+        "outputId": "4be2e4a8-3b26-48c8-918a-37d18439beed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -59,7 +59,7 @@
         "import os\n",
         "%matplotlib inline"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,10 +86,269 @@
       "metadata": {
         "colab_type": "code",
         "id": "W5sNiMU7rPm7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 590
+        },
+        "outputId": "de926dd0-1e7a-4224-9d28-6f9b8e86479f"
+      },
+      "source": [
+        "df = pd.read_json('https://raw.githubusercontent.com/sanjaytallolli/DataScienceProjects2020/master/amsterdam.json')\n",
+        "df"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>host_listings_count</th>\n",
+              "      <th>accommodates</th>\n",
+              "      <th>bathrooms</th>\n",
+              "      <th>bedrooms</th>\n",
+              "      <th>guests_included</th>\n",
+              "      <th>minimum_nights</th>\n",
+              "      <th>number_of_reviews</th>\n",
+              "      <th>calculated_host_listings_count</th>\n",
+              "      <th>price</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>room_type</th>\n",
+              "      <th>instant_bookable</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$145.00</td>\n",
+              "      <td>52.361173</td>\n",
+              "      <td>4.866755</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>f</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>17</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$88.00</td>\n",
+              "      <td>52.370237</td>\n",
+              "      <td>4.859507</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>f</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$130.00</td>\n",
+              "      <td>52.362016</td>\n",
+              "      <td>4.866872</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>f</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>$110.00</td>\n",
+              "      <td>52.365826</td>\n",
+              "      <td>4.858178</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>f</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>10</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$115.00</td>\n",
+              "      <td>52.364179</td>\n",
+              "      <td>4.864885</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>f</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15176</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$80.00</td>\n",
+              "      <td>52.391679</td>\n",
+              "      <td>4.779126</td>\n",
+              "      <td>Private room</td>\n",
+              "      <td>t</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15177</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$125.00</td>\n",
+              "      <td>52.395505</td>\n",
+              "      <td>4.878143</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>t</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15178</th>\n",
+              "      <td>6.0</td>\n",
+              "      <td>16</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>10</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$435.00</td>\n",
+              "      <td>52.426224</td>\n",
+              "      <td>4.959300</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>t</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15179</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$80.00</td>\n",
+              "      <td>52.354298</td>\n",
+              "      <td>4.974295</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>f</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15180</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>$200.00</td>\n",
+              "      <td>52.343953</td>\n",
+              "      <td>4.779640</td>\n",
+              "      <td>Entire home/apt</td>\n",
+              "      <td>f</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>15181 rows × 13 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       host_listings_count  accommodates  ...        room_type  instant_bookable\n",
+              "0                      1.0             6  ...  Entire home/apt                 f\n",
+              "1                      1.0             2  ...  Entire home/apt                 f\n",
+              "2                      1.0             2  ...  Entire home/apt                 f\n",
+              "3                      2.0             4  ...  Entire home/apt                 f\n",
+              "4                      1.0             2  ...  Entire home/apt                 f\n",
+              "...                    ...           ...  ...              ...               ...\n",
+              "15176                  2.0             4  ...     Private room                 t\n",
+              "15177                  1.0             2  ...  Entire home/apt                 t\n",
+              "15178                  6.0            16  ...  Entire home/apt                 t\n",
+              "15179                  1.0             4  ...  Entire home/apt                 f\n",
+              "15180                  1.0             6  ...  Entire home/apt                 f\n",
+              "\n",
+              "[15181 rows x 13 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dcv99THFDPvi",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "df = pd.read_json('amsterdam.json')\n",
         "df = df.dropna()"
       ],
       "execution_count": 0,
@@ -113,30 +372,33 @@
       "metadata": {
         "id": "yaAOMsXRl34t",
         "colab_type": "code",
-        "outputId": "078acd13-de96-434e-b023-4042f75f3911",
-        "colab": {}
+        "outputId": "f1ef45e8-868b-49bc-bdf0-4b4021191607",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        }
       },
       "source": [
         "df.price.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    145.0\n",
-              "1     88.0\n",
-              "2    130.0\n",
-              "3    110.0\n",
-              "4    115.0\n",
-              "Name: price, dtype: float64"
+              "0    $145.00\n",
+              "1     $88.00\n",
+              "2    $130.00\n",
+              "3    $110.00\n",
+              "4    $115.00\n",
+              "Name: price, dtype: object"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 17
         }
       ]
     },
